--- a/expanding_cards/styles.css
+++ b/expanding_cards/styles.css
@@ -1,11 +1,17 @@
+* {
+    box-sizing: border-box;
+  }
+
 .img_wrapper {
     display: flex;
     width: 100%;
-    /*justify-content: space-between;*/
+    margin: auto;
+    position: absolute;
+    top: 15%;
 }
 
 img {
-    width: 300px;
+    width: 700px;
     border-radius: 10px;
 }
 
@@ -19,5 +25,33 @@ img {
 
 .photo_expanded {
     transition: width 1s;
-    width: 300px;
+    width: 700px;
+}
+
+.flex-center {
+    display: flex;
+    margin: auto;
+}
+
+.image{
+    position: relative;
+}
+
+.image h2 {
+    position: absolute;
+    bottom: 10px;
+    color: #fff;
+    background-color: rgb(0, 0, 0, 0.4);
+    padding: 10px;
+    margin: 10px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.image.photo_shrinked h2 {
+    opacity: 0;
+}
+
+.image.photo_expanded h2 {
+    opacity: 1;
+    transition: opacity 1s;
 }
